# demo-zephyr

./: CMakeLists.txt  Kconfig  prj.conf
boards/: native_sim.overlay
src/: main.c
src/controller/: CMakeLists.txt  controller.c  controller.h  sensor_adltc2990.c  sensor_adltc2990.h
src/core/: CMakeLists.txt  event.h  thread.c  thread.h
src/emulators/: CMakeLists.txt  adltc2990.c  adltc2990.h  manager.c  manager.h
src/gui/: CMakeLists.txt  events_handler.c  events_handler.h  gui.c  gui.h
src/gui/screens/: CMakeLists.txt  about_screen.c  about_screen.h  home_screen.c  home_screen.h  settings_screen.c  settings_screen.h
src/gui/widgets/: CMakeLists.txt  page.c  page.h
