cmake_minimum_required(VERSION 3.20.0)

set(BOARD "native_sim")

find_package(Zephyr REQUIRED HINTS $ENV{ZEPHYR_BASE})

project(demo-zephyr LANGUAGES C)

# The library 'app' is mandatory as it is predefined by Zephir build system.
# See for details ${ZEPHYR_BASE}/cmake/modules/kernel.cmake
target_sources(app PRIVATE src/main.c)

target_include_directories(app PRIVATE ${CMAKE_SOURCE_DIR}/src)

add_subdirectory(src/core)
add_subdirectory(src/emulators)
